# ccflux

./: .gitignore  CHANGELOG.md  README.md  generate_demo.sh  install.ps1  install.sh  schema.sql  seed_docs_db.py  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  docs.yml  release.yml
ccflux-core/: Cargo.toml
ccflux-core/src/: agent.rs  auth.rs  main.rs  model.rs  offset.rs  parse.rs  queue.rs  report.rs  signing.rs
dashboard/: five_hour_windows.sql  model_breakdown.sql  usage_by_user.sql
docs/: book.toml
docs/src/: SUMMARY.md  admin-dashboard.md  configuration.md  dashboard.html  demo.md  introduction.md  security.md  server-setup.md  troubleshooting.md  user-setup.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks-windows.json  hooks.json
plugin/scripts/: report_turn.ps1  report_turn.sh  session_end.ps1  session_end.sh  session_start.ps1  session_start.sh
receiver/: Cargo.toml
receiver/src/: admin.rs  billing.rs  db.rs  health.rs  keys.rs  main.rs  model.rs  tiers.rs  token.rs
