[package]
name = "ccflux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ccflux"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["tls"] }
rustls = "0.23"
webpki-roots = "0.26"
rustls-pemfile = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
