[package]
name = "ccflux-receiver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ccflux-receiver"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = "2"
base64 = "0.22"
subtle = "2"

[dev-dependencies]
tempfile = "3"
